# OperatingSystems

./: .gitignore  CMakeLists.txt
Assignment1/: CMakeLists.txt  CmdArgs.cpp  NonAlNum.c  Q4.c  SysCalls.c  ToUppercase.c  input.txt
Assignment1/Q5/: Makefile  Q5.c  convert.c  count.c  input.txt  output.txt
Assignment1/Q6/: Makefile  Q6.c  change.c  count.c  input.txt  output.txt
Assignment2/: CMakeLists.txt
Assignment3/: .gitignore  Makefile  Makefile.mk  cpu-scheduler  cpu-scheduler.c  globals.h  header.h  process1.txt  process2.txt  process3.txt  results.txt
Assignment5/: DetectDeadlock.c
Dummy/: CMakeLists.txt  a.out  ex2  exec1.c  exec2.c  main.c
Misc/: Bankers  Bankers.c  Detect  DetectDeadlock.c  Dine  DiningPhilosophers.c  PC  Producer-Consumer.c
test1/: 2201074.c  Makefile
test2/: Child.c  Parent.c  makefile
test2/testing/: check  primeChk.c
test3/: 2201074_tes3.c  main  test  test.c
